[style] incorporate sass and flexbox mixins

--- a/css/main.css
+++ b/css/main.css
@@ -95,8 +95,12 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
+body {
+    display: flex;
+    justify-content: center;
+    background-color: #DEDEDE;
+    padding: 0 2em;
+}
 
 
 
